--- a/css/servicioLinea.css
+++ b/css/servicioLinea.css
@@ -264,11 +264,11 @@ a.btn.btn-link {
 #menu-flters .filter-active::after {
     width: 100%;
 }
-/* Teléfonos muy pequeños (378px o menos) */
+
 @media (max-width: 378px) {
     #menu-flters {
         display: flex;
-        overflow-x: auto; /* Permite hacer scroll horizontal */
+        overflow-x: auto; 
         gap: 8px;
         padding-bottom: 12px;
     }
